Update add meta description Goout

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/goout.svg" />
+    <meta
+      name="description"
+      content="Selamat datang di GoOut Travel - Website Wisata Terkini. Temukan petualangan baru, destinasi indah, dan panduan perjalanan terbaik di seluruh dunia. Dengan GoOut Travel, rencanakan perjalanan Anda dengan mudah dan temukan inspirasi perjalanan yang tak terlupakan. Nikmati eksplorasi dunia dengan panduan ahli kami. Selalu siap untuk petualangan berikutnya!"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goout Travel</title>
   </head>
